--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,13 +3,29 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/*---------------------------------------------------LAPTOP DESIGN-----------------------------------------------------------*/
+
+
+/*--Forsidebilleder mobil--*/
+.introbilledeM{
+    display: none;
+    width: 100%;
+}
+
+#burgermenu{
+    display: none; /*burgermenu vises*/
+}
+
 /*---------------------------TEKST-----------------------------------------------------------*/
 p{
     font-family: 'Abel', sans-serif;
-    font-size: 12pt;
+    font-size: 15pt;
     color: white;
     font-weight: 200;
 }
+
+/*--overskrift i den grønne boks---*/
 h1{
     font-family: 'Abel', sans-serif;
     font-size: 40pt;
@@ -17,6 +33,7 @@ h1{
     font-weight: 200;
 }
 
+/*--overskrift på billederne---*/
 h2{
     font-family: 'Abel', sans-serif;
     font-size: 30pt;
@@ -28,6 +45,12 @@ h2{
     z-index: 998;
 }
 
+h3{
+    font-family: 'Abel', sans-serif;
+    font-size: 20pt;
+    color: white;
+}
+
 h4{
     font-family: 'Abel', sans-serif;
     font-size: 30pt;
@@ -35,18 +58,11 @@ h4{
     font-weight: 200;
 }
 
-#burgermenu{
-    display: none; /*dækker over den ekstra menu - burgermenuen - der ikke skal vises på laptop*/
-}
 
 /*---------------------------HEADER-----------------------------------------------------------*/
+
 #logo{
-    padding-left: 1%;
-    padding-top: 1%;
-    width: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: aqua;
 }
 
 header{
@@ -55,7 +71,7 @@ header{
     position: fixed;
     top: 0;
     width: 100%;
-    height: 90px;
+    height: 100px;
     z-index: 999;
     display: block;
     border-bottom: 1px solid rgb(255, 255, 255);
@@ -65,18 +81,16 @@ header{
 header nav{
     display: flex;
     justify-content: end;
-    width: 95%;
 }
 
 header nav a{
     padding-left: 45px;
     padding-right: 45px;
     text-decoration:none;
-    color: black;
     font-family: 'Abel', sans-serif;
     color: white;
-
 }
+
 header nav a:hover{
     text-decoration: underline;
 
@@ -123,9 +137,12 @@ header nav a:hover{
 /*--Den grønne boks med tekst--*/
 .grøntekstboks{
     width: 100%;
-    height: 500px;
+    height: auto;
     border: 0.5px solid rgb(255, 255, 255);
-    padding: 10%;
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-top: 10%;
+    padding-bottom: 10%;
     text-align: start;
     background-color: #828a54;
 }
@@ -162,20 +179,24 @@ header nav a:hover{
 /*--UNDERSIDE--*/
 .tobilleder{
     position: relative;
+    text-align: start;
     display: flex;
-    width: 50%;
+    width: 100%;
 }
 
 .kvadrat2{
-    width: 100%;
+    width: 50%;
     border: 0.5px solid rgb(255, 255, 255);
 }
 
 #blaatekstboks{
     width: 100%;
-    height: 500px;
+    height: auto;
     border: 0.5px solid rgb(255, 255, 255);
-    padding: 10%;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 10%;
+    padding-bottom: 10%;
     text-align: start;
     background-color: #759ea0;
 }
@@ -196,11 +217,212 @@ footer{
     color: #2C4024;
 }
 
-/*-----------------------------MOBIL DESIGN----------------------------------------------------*/
+/*---------------------------------------------------------MOBIL DESIGN----------------------------------------------------*/
 
 @media screen and (max-width: 768px){
-    .kvadrat{
+
+/*------------------BILLEDER--------------*/
+
+/*--Forsidebilleder laptop--*/
+    .introbilledeL{
+        display: none;
+    }
+
+/*--Forsidebilleder mobil--*/
+    .introbilledeM{
+        display: block;
+        width: 100%;
+    }
+
+    /*--De tre billeder på forsiden--*/
+    .trebilleder{
         flex-direction:column;
-        align-items: center;
         }
-}
+
+    /*--De to billeder på undersiderne--*/
+    .tobilleder{
+        flex-direction:column;
+        }
+    .kvadrat2{
+        width: 100%;
+    }
+
+/*------------------BOKSE--------------*/
+    .grøntekstboks{
+        padding-left: 20%;
+        padding-right: 20%;
+    }
+
+    .blaatekstboks{
+        padding-left: 20%;
+        padding-right: 20%;
+    }
+
+/*---------------------------TEKST----------*/
+    h2{
+        font-size: 60pt;
+    }
+
+
+
+/*--------------------------HEADER---------*/
+    #logo{
+        display: none;
+    }
+    header nav{
+        display: none; /*laptopmenuen vises ikke på mobil*/
+    }
+    
+
+    /*------------------BURGERMENU---------*/
+    
+    #burgermenu{
+        display: block; /*burgermenu vises*/
+        }
+
+    .container {
+        width: 100%;
+        margin: auto;
+        }
+          
+    .navbar {
+        width: 100%;
+        }
+          
+    .nav-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 62px;
+        /*margin-top: 20px;*/
+        }
+          
+    .navbar .menu-items {
+        display: flex;
+        }
+          
+    .navbar .nav-container li { /*for at alle punkter ikke får en prik foran sig (fordi <li>)*/
+        list-style: none;
+        }
+          
+    .navbar .nav-container a {
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        font-weight: 500;
+        font-size: 1.2rem;
+        padding: 0.7rem;
+        }
+          
+    .nav-container {
+        display: block;
+        position: relative;
+        height: 60px;
+        }
+          
+    .nav-container .checkbox { /*styling af den usynlige chechbox, der ligger under burgerikonet, så det virker når man klikker på det - ellers er det bare et billede*/
+        position: absolute;
+        display: block;
+        height: 32px;
+        width: 32px;
+        top: 40px;
+        right: 20px;
+        z-index: 5;
+        opacity: 0;
+        cursor: pointer;
+        }
+          
+    .nav-container .hamburger-lines { /*ja - burgerlinjernes styling så de ses som burger*/
+        display: block;
+        height: 26px;
+        width: 32px;
+        position: absolute;
+        top: 40px;
+        right: 20px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        }
+          
+    .nav-container .hamburger-lines .line { /*styling af den enkelte linje i burgeren*/
+        display: block;
+        height: 4px;
+        width: 100%;
+        border-radius: 10px;
+        background: rgb(255, 255, 255)
+        }
+          
+    .nav-container .hamburger-lines .line1 { 
+        transform-origin: 0% 0%;
+        transition: transform 0.4s ease-in-out;
+        }
+          
+    .nav-container .hamburger-lines .line2 { 
+        transition: transform 0.2s ease-in-out;
+        }
+          
+    .nav-container .hamburger-lines .line3 {
+        transform-origin: 0% 100%;
+        transition: transform 0.4s ease-in-out;
+        }
+          
+    .navbar .menu-items { /*styling til hvordan linksene er placeret og transformeres*/
+        padding-top: 120px;
+        background-color: #828a54;
+        height: 110vh;
+        width: 100%;
+        transform: translate(-150%);
+        display: flex;
+        flex-direction: column;
+        padding-left: 50px;
+        transition: transform 0.5s ease-in-out;
+        text-align: center;
+        line-height: 10PX;
+        }
+        
+          
+    .navbar .menu-items li { /*tekststørrelse, -type og den slags*/
+        margin-bottom: 1.2rem;
+        font-size: 1.5rem;
+        font-weight: 500;
+        text-align: left;
+        padding-left: 30%;
+        }
+
+    .navbar .menu-items .ddc { /*det samme, men til de punkter, der var dropdown content (derfor ddc) i laptopnaven*/
+        margin-bottom: 1.2rem;
+        font-size: 1rem;
+        font-weight: 400;
+        text-align: left;
+        }
+
+    #burgerlogo {
+        position: absolute;
+        top: 5px;
+        left: 15px;
+        width: 10%;
+        height: auto; 
+        margin-top: 20px;
+        }
+          
+    .nav-container input[type="checkbox"]:checked ~ .menu-items { /* hvad der sker når den usynlige checkbox er checket af*/
+        transform: translateX(0);
+        }
+          
+    .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 { /*øverste burgerlinje drejer højre ende ned*/
+        transform: rotate(45deg);
+        }
+          
+    .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 { /*midterste linje forsvinder*/
+        transform: scaleY(0);
+        }
+          
+    .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {/*nederste burgerlinje drejer højre ende op*/
+        transform: rotate(45deg);
+        transform: rotate(-45deg);
+        }
+        
+    .nav-container input[type="checkbox"]:checked ~ .logo{/*logoet ligger lige nu under kassen med menu-items og skjules - så display=none er ligegyldigt, vi skal have den ind i menu-items kassen, hvis den skal vises, men det tænker jeg vi gør, hvis vi har tid*/
+        display: block;
+        }
+ }
