--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,13 +59,17 @@ h4{
     font-weight: 200;
 }
 
-ul{
+.punkter{
     font-family: sans-serif;
     font-size: 13pt;
     color: white;
     font-weight: 200;
     padding-left: 2%;
-    line-height: 1.5;
+    line-height: 2;
+}
+
+.tekstfooter{
+    color: #2C4024;
 }
 
 
@@ -192,6 +196,13 @@ video{
     background-color: #828a54;
 }
 
+/*--kortet--*/
+    .kortboks{
+        padding-top: 20%;
+        display: flex;
+        align-items: center;
+        }
+
 /*--De tre billeder--*/
 
 .trebilleder{
@@ -246,20 +257,27 @@ video{
     background-color: #759ea0;
 }
 
+
 /*----------------------------------FOOTER----------------------------------------------------*/
 footer{
-    height: 250px;
+    height: 270px;
     padding: 5%;
     background-color: #EDE3DD;
+    display: flex;
+    justify-content: start;
 }
 
+.footerboks{
+    padding-right: 5%;
+}
 
 .socialemedier{
     display: flex;
     justify-content: center;
     justify-content: space-between;
-    width: 80px;
+    width: 60px;
     color: #2C4024;
+
 }
 
 /*---------------------------------------------------------MOBIL DESIGN----------------------------------------------------*/
@@ -273,6 +291,9 @@ footer{
     .introbilledeM{
         display: block;
         width: 100%;
+    }
+    .introbilledeL{
+        display: none;
     }
 
     /*--Forsidevideo laptop--*/
@@ -292,6 +313,7 @@ footer{
     .kvadrat2{
         width: 100%;
     }
+
 
 /*------------------BOKSE--------------*/
     .grøntekstboks{
@@ -319,6 +341,12 @@ footer{
         display: none; /*laptopmenuen vises ikke på mobil*/
     }
     
+/*--------------------------FOOTER---------*/
+    footer{
+        flex-direction:column;
+        height: 330px;
+        justify-content: space-between;
+    }
 
     /*------------------BURGERMENU---------*/
     
