--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,6 +59,7 @@ h4{
     font-weight: 200;
 }
 
+/*--punkterne i teksten---*/
 .punkter{
     font-family: sans-serif;
     font-size: 13pt;
@@ -68,6 +69,7 @@ h4{
     line-height: 2;
 }
 
+/*--teksten i footeren---*/
 .tekstfooter{
     color: #2C4024;
 }
@@ -78,8 +80,8 @@ h4{
 
 
 #logo{
-    padding-top: 20%;
-    padding-left: 20%;
+    padding-top: 2%;
+    padding-left: 2%;
 }
 
 .headerdiv{
@@ -119,6 +121,10 @@ header nav a:hover{
     text-decoration: underline;
 
 }
+
+
+
+
 
 /*------------------------------------DROPDOWN------------------------------------------*/
 .dropdown{
@@ -197,16 +203,15 @@ video{
 }
 
 /*--kortet--*/
-    .kortboks{
-        padding-top: 20%;
-        display: flex;
-        align-items: center;
-        }
+.kortboks{
+    padding-top: 20%;
+    display: flex;
+    align-items: center;
+    }
 
 /*--De tre billeder--*/
 
 .trebilleder{
-    position: relative;
     text-align: start;
     display: flex;
     width: 100%;
@@ -306,6 +311,7 @@ footer{
         flex-direction:column;
         }
 
+
     /*--De to billeder på undersiderne--*/
     .tobilleder{
         flex-direction:column;
@@ -317,20 +323,22 @@ footer{
 
 /*------------------BOKSE--------------*/
     .grøntekstboks{
-        padding-left: 20%;
-        padding-right: 20%;
+        padding-left: 10%;
+        padding-right: 10%;
     }
 
     .blaatekstboks{
-        padding-left: 20%;
-        padding-right: 20%;
+        padding-left: 10%;
+        padding-right: 10%;
     }
 
 /*---------------------------TEKST----------*/
     h2{
-        font-size: 60pt;
+        font-size: 50pt;
     }
-
+    p{
+        font-size: 11pt;
+    }
 
 
 /*--------------------------HEADER---------*/
@@ -361,21 +369,21 @@ footer{
           
     .navbar {
         width: 100%;
-        }
-          
+      }
+
     .nav-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 62px;
-        /*margin-top: 20px;*/
         }
           
     .navbar .menu-items {
         display: flex;
         }
-          
-    .navbar .nav-container li { /*for at alle punkter ikke får en prik foran sig (fordi <li>)*/
+    
+    /*fjerner prik foran li*/
+    .navbar .nav-container li {
         list-style: none;
         }
     
@@ -385,16 +393,18 @@ footer{
         color: rgb(255, 255, 255);
         font-weight: 500;
         font-size: 1.2rem;
-        padding: 0.7rem;
-        }
-          
+        padding: 50px;
+        } 
+    
+
     .nav-container {
         display: block;
         position: relative;
         height: 60px;
         }
-          
-    .nav-container .checkbox { /*styling af den usynlige chechbox, der ligger under burgerikonet, så det virker når man klikker på det - ellers er det bare et billede*/
+    
+        /*styling af usynlig chechbox under burgermenuikonet*/
+    .nav-container .checkbox {
         position: absolute;
         display: block;
         height: 32px;
@@ -405,8 +415,9 @@ footer{
         opacity: 0;
         cursor: pointer;
         }
-          
-    .nav-container .hamburger-lines { /*ja - burgerlinjernes styling så de ses som burger*/
+    
+        /*--burgerlinjernes styling så de ses som burger---*/
+    .nav-container .hamburger-lines {
         display: block;
         height: 26px;
         width: 32px;
@@ -419,7 +430,7 @@ footer{
         justify-content: space-between;
         }
     
-    /*linjene i burgermenuen*/
+    /*styling af burger linjerne*/
     .nav-container .hamburger-lines .line {
         display: block;
         height: 4px;
@@ -427,7 +438,8 @@ footer{
         border-radius: 10px;
         background: rgb(255, 255, 255)
         }
-          
+    
+    /*transition af linjerne i burgermenuen - fra burger til kryds*/
     .nav-container .hamburger-lines .line1 { 
         transform-origin: 0% 0%;
         transition: transform 0.4s ease-in-out;
@@ -457,16 +469,17 @@ footer{
         line-height: 10PX;
         }
         
-          
-    .navbar .menu-items li { /*tekststørrelse, -type og den slags*/
+    /*---de 3 emnerne i headeren---*/
+    .navbar .menu-items li {
         margin-bottom: 1.2rem;
-        font-size: 1.5rem;
+        font-size: 2rem;
         font-weight: 500;
         text-align: left;
         padding-left: 30%;
         }
 
-    .navbar .menu-items .ddc { /*det samme, men til de punkter, der var dropdown content (derfor ddc) i laptopnaven*/
+    /*---de 7 underemnerne i headeren---*/
+    .navbar .menu-items .ddc {
         margin-bottom: 1.2rem;
         font-size: 1rem;
         font-weight: 400;
@@ -481,7 +494,8 @@ footer{
         height: auto; 
         margin-top: 20px;
         }
-          
+    
+    /*transition af linjerne i burgermenuen - fra bruger til kryds*/
     .nav-container input[type="checkbox"]:checked ~ .menu-items { /* hvad der sker når den usynlige checkbox er checket af*/
         transform: translateX(0);
         }
@@ -499,7 +513,7 @@ footer{
         transform: rotate(-45deg);
         }
         
-    .nav-container input[type="checkbox"]:checked ~ .logo{/*logoet ligger lige nu under kassen med menu-items og skjules - så display=none er ligegyldigt, vi skal have den ind i menu-items kassen, hvis den skal vises, men det tænker jeg vi gør, hvis vi har tid*/
+    .nav-container input[type="checkbox"]:checked ~ .logo{/*logoet ligger lige nu under kassen med menu-items og skjules - så display=none er ligegyldigt*/
         display: block;
         }
  }
