--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,7 @@
 .introbilledeM{
     display: none;
     width: 100%;
+    height: auto;
 }
 
 #burgermenu{
@@ -19,7 +20,7 @@
 
 /*---------------------------TEKST-----------------------------------------------------------*/
 p{
-    font-family: sans-serif;
+    font-family: sans-serif; 
     font-size: 13pt;
     color: white;
     font-weight: 200;
@@ -82,8 +83,13 @@ h4{
 
 
 #logo{
-    padding-top: 2%;
-    padding-left: 2%;
+    padding-top: 1.5%;
+    padding-left: 1.5%;
+}
+
+#logob{
+    width: 140px;
+    height: 40px;
 }
 
 .headerdiv{
@@ -95,7 +101,7 @@ header{
     position: fixed;
     top: 0;
     width: 100%;
-    height: 100px;
+    height: 90px;
     z-index: 999;
     display: block;
     border-bottom: 1px solid rgb(255, 255, 255);
@@ -105,9 +111,9 @@ header{
 header nav{
     display: flex;
     justify-content: end;
-
     width: 100%;
-    padding-top: 3%;
+    align-items: center;
+    padding-top: 2%;
 }
 
 header nav a{
@@ -148,7 +154,7 @@ header nav a:hover{
 }
 .dropdown-content a:hover{
     text-decoration: none;
-    color: #848F44;
+    color: #848f44;
 }
 .dropdown:hover .dropdown-content{
     display: block;   
@@ -217,11 +223,13 @@ video{
     text-align: start;
     display: flex;
     width: 100%;
+    height: auto;
     background-color: #EDE3DD;
 }
 
 .kvadrat3{
     width: 100%;
+    height: auto;
     border: 0.5px solid rgb(255, 255, 255);
 }
 
@@ -241,14 +249,14 @@ video{
 
 /*--UNDERSIDE--*/
 .tobilleder{
-    position: relative;
-    text-align: start;
     display: flex;
     width: 100%;
+    height: auto;
 }
 
 .kvadrat2{
     width: 50%;
+    height: auto;
     border: 0.5px solid rgb(255, 255, 255);
 }
 
@@ -298,6 +306,7 @@ footer{
     .introbilledeM{
         display: block;
         width: 100%;
+        height: auto;
     }
     .introbilledeL{
         display: none;
@@ -318,11 +327,11 @@ footer{
     .tobilleder{
         flex-direction:column;
         }
+
     .kvadrat2{
         width: 100%;
+        height: auto;
     }
-
-
 /*------------------BOKSE--------------*/
     .grøntekstboks{
         padding-left: 10%;
@@ -342,10 +351,10 @@ footer{
 
     h2{
         font-size: 45pt;
-        padding: 5%;
+        padding: 4%;
     }
     p{
-        font-size: 11pt;
+        font-size: 12pt;
     }
 
 
@@ -498,7 +507,7 @@ footer{
         position: absolute;
         top: 15px;
         left: 25px;
-        width: 15%;
+        width: 17%;
         height: auto; 
         margin-top: 20px;
         }
